# flv-parser

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  changelog.txt  main.cpp  readme.md
.github/workflows/: cmake-release.yml
license/: LGPL-3.0.txt  LICENSE
model/: frameinfo.cpp  frameinfo.h  modelwidget.cpp  modelwidget.h  utils.h
res/: app.qrc  user_guide.html
res/windows/: app.rc
src/: main.cpp
src/model/: DeleteStrategy.cpp  DeleteStrategy.h  FrameInfo.cpp  FrameInfo.h  Log.cpp  Log.h  ModelWidget.cpp  ModelWidget.h  TagInfo.cpp  TagInfo.h  Utils.h
src/utils/: Log.cpp  Log.h  Utils.h
src/view/: BinaryEditDelegate.cpp  BinaryEditDelegate.h  DocView.cpp  DocView.h  LogView.cpp  LogView.h  TagView.cpp  TagView.h  docview.ui  logview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  tagview.ui
view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
